# gofr-common

./: .env  .env.template  .gitignore  README.md  pyproject.toml  readme.md
config/: gofr_ports.env  gofr_ports.sh
docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.n8n.prod  Dockerfile.openwebui.prod  Dockerfile.vault  build-base.sh  build-dev.sh  build-n8n-prod.sh  build-n8n.sh  build-openwebui-prod.sh  deploy-swarm.sh  docker-compose-tools.yml  entrypoint-dev.sh  entrypoint-n8n-custom.sh  entrypoint-vault.sh  gofr-swarm.env  gofr-swarm.yml  run-dev.sh  run-n8n.sh  run-openwebui.sh  start-tools-prod.sh  teardown-swarm.sh  vault-compose.yml  vault-config.hcl
docker/backup/: Dockerfile  backup-config.yml  entrypoint.sh
docker/infra/: docker-compose.infra.yml  start-all.sh  stop-all.sh
docker/infra/chroma/: Dockerfile  build.sh  run.sh  stop.sh
docker/infra/neo4j/: Dockerfile  build.sh  run.sh  stop.sh
docker/infra/vault/: Dockerfile  build.sh  run.sh  stop.sh  vault-config.hcl
docker/vault-config.d/: local.hcl
docs/: AUTH_MIGRATION_GUIDE.md  AUTH_REFACTORING_PLAN.md  BACKUP.md  GOFR_AUTH_SYSTEM.md  GOFR_COMMON_ELEMENTS.md  GOFR_CONSOLIDATION_STRATEGY.md  GOFR_DEVELOPMENT_STANDARDS.md  MIGRATION_GUIDE.md  PORT_STANDARDIZATION.md  VSCODE_LAUNCH_STANDARDS.md
docs/auth/: gofr_auth_system.md  token_naming_proposal.md
docs/backup/: backup.md
docs/config/: port_standardization.md
docs/technical/: GOFR_DEVELOPMENT_STANDARDS.md  gofr_development_standards.md  vault_architecture.md  vscode_launch_standards.md
docs/vault/: vault_architecture.md
scripts/: auth_env.sh  auth_manager.py  auth_manager.sh  bootstrap_auth.py  bootstrap_auth.sh  bootstrap_vault.py  create_group.py  dump_tools_environment.sh  init_auth.py  manage_vault.sh  readme.md  restart_servers.sh  run_tests.sh  token_manager.sh  update_common.sh
scripts/backup/: backup_now.sh  list_backups.sh  restore_backup.sh
scripts/data/auth/: .jwt_secret
src/gofr_common/: __init__.py  gofr_env.py
src/gofr_common/auth/: __init__.py  admin.py  config.py  exceptions.py  group_resolution_design.md  groups.py  helpers.py  identity.py  middleware.py  policies.py  provider.py  readme.md  service.py  spec.md  token_service.py  tokens.py  vault_spec.md
src/gofr_common/auth/backends/: __init__.py  base.py  factory.py  file.py  memory.py  vault.py  vault_client.py  vault_config.py
src/gofr_common/backup/: __init__.py  config.py  housekeeping.py  service.py  verify.py
src/gofr_common/config/: __init__.py  base.py  base_config.py  env_loader.py  gofr_ports.env  ports.py  settings.py
src/gofr_common/exceptions/: __init__.py  base.py
src/gofr_common/logger/: __init__.py  console_logger.py  default_logger.py  interface.py  structured_logger.py
src/gofr_common/mcp/: __init__.py  responses.py
src/gofr_common/storage/: __init__.py  base.py  blob.py  exceptions.py  file_storage.py  metadata.py
src/gofr_common/testing/: __init__.py  pytest_fixtures.py
src/gofr_common/vault/: __init__.py  bootstrap.py
src/gofr_common/web/: __init__.py  app.py  cors.py  health.py  middleware.py
tests/: __init__.py  test_auth.py  test_auth_phase1.py  test_backends.py  test_cli_phase3.py  test_code_quality.py  test_config.py  test_env_loader.py  test_exceptions.py  test_groups.py  test_logger.py  test_mcp.py  test_package.py  test_tokens.py  test_vault_integration.py  test_web.py
